<resources>
    <string name="app_name">Eat and Joy</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="pass">Pass</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone number</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="restaurants">RESTAURANTS</string>
    <string name="eventsList">EVENTS</string>
    <string name="recommend">RECOMMEND</string>
    <string name="recommendRestaurants">RECOMMEND RESTAURANTS</string>
    <string name="searchRestaurants">SEARCH RESTAURANTS</string>
    <string name="searchEvents">SEARCH EVENTS</string>
    <string name="recommendEvents">RECOMMEND EVENTS</string>
    <string name="join">JOIN</string>
    <string name="unjoin">UNCOIL</string>
</resources>
